...
const val ERROR_IDENTIFIER = "ERR"
const val MAGIC_UUID = "e3ee9949-bd5f-401c-8a57-395a98ed40ee"
const val NEXTTRACE_CORE_VERSION = "1.7.2"


val RESERVED_IPV4_CIDR = mapOf(
    "0.0.0.0/8" to "RFC1122",
    "100.64.0.0/10" to "RFC6598",
    "127.0.0.0/8" to "RFC1122",
    "169.254.0.0/16" to "RFC3927",
    "192.0.0.0/24" to "RFC6890",
    "192.0.2.0/24" to "RFC5737",
    "192.88.99.0/24" to "RFC3068",
...
